kubernetes-ingress/hostname-path-ingress-with-tls.yaml

apiVersion: extensions/v1betav1
kind: Ingress
metadata:
  name: tls-ingress-for-test-domain
spec:
  tls:
    - hosts:
        - someonlinestore.com
      secretName: testsecret-tls
  rules:
    - host: someonlinestore.com
      http:
        path: /
        backend:
          serviceName: dxl-home-page-service
          servicePort: 80
